[package]
name = "rust-pong"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.44.0"
features = [
  "Foundation_Numerics",
  "Win32_Foundation",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",  
  "Win32_Graphics_DirectWrite",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
]